--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,7 +7,8 @@
   "content_scripts": [{
     "js": [
       "jquery-3.3.1.min.js",
-      "content.js"
+      "content.js",
+      "fuse.min.js"
     ],
     "css": ["styles.css"],
     "matches": ["https://www.ontario.ca/laws/statute/*"]
