--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,7 +8,8 @@
     "js": [
       "jquery-3.3.1.min.js",
       "content.js",
-      "fuse.min.js"
+      "fuse.min.js",
+      "compromise.min.js"
     ],
     "css": ["styles.css"],
     "matches": ["https://www.ontario.ca/laws/statute/*"]
