--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -9,7 +9,8 @@
       "jquery-3.3.1.min.js",
       "content.js",
       "fuse.min.js",
-      "compromise.min.js"
+      "compromise.min.js",
+      "natural.min.js"
     ],
     "css": ["styles.css"],
     "matches": ["https://www.ontario.ca/laws/statute/*"]
